# UCB-CS267-Parallel-Panoramic-Image-Stitching

./: .gitignore  CMakeLists.txt  README.md  benchmark_panorama.py  benchmark_serial_parallel.py  evaluate_panorama.py  pano.sh
src/gpu/: CMakeLists.txt  convolution.cu  convolution.cuh  harris_detector.cu  harris_detector.cuh  harris_matcher.cu  harris_matcher.cuh  main.cpp  ransac.cu  ransac.cuh
src/opencv/: CMakeLists.txt  main.cpp
src/openmp/: CMakeLists.txt  main.cpp
src/reader/: CMakeLists.txt  reader.cpp  reader.hpp
src/serial/: CMakeLists.txt  main.cpp
